// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graphql Queries Should return correct error when pokemon doesn't exist 1`] = `
{
  "body": {
    "data": {
      "pokemonById": null,
    },
    "errors": [
      {
        "extensions": {
          "code": "POKEMON_NOT_FOUND",
        },
        "locations": [
          {
            "column": 19,
            "line": 2,
          },
        ],
        "message": "Pokemon with id xxx doesn't exist",
        "path": [
          "pokemonById",
        ],
      },
    ],
  },
  "status": 200,
}
`;

exports[`Graphql Queries Should return pokemon by id 1`] = `
{
  "body": {
    "data": {
      "pokemonById": {
        "attacks": {
          "fast": [
            {
              "damage": 12,
              "name": "Tackle",
            },
            {
              "damage": 7,
              "name": "Vine Whip",
            },
          ],
        },
        "evolutions": [
          {
            "id": "002",
            "name": "Ivysaur",
          },
          {
            "id": "003",
            "name": "Venusaur",
          },
        ],
        "id": Any<String>,
        "isFavorite": Any<Boolean>,
        "maxCP": Any<Number>,
        "maxHP": Any<Number>,
        "name": Any<String>,
        "resistant": [
          "Water",
          "Electric",
          "Grass",
          "Fighting",
          "Fairy",
        ],
        "types": [
          "Grass",
          "Poison",
        ],
        "weaknesses": [
          "Fire",
          "Ice",
          "Flying",
          "Psychic",
        ],
      },
    },
  },
  "status": 200,
}
`;

exports[`Graphql Queries Should return pokemon by name 1`] = `
{
  "body": {
    "data": {
      "pokemonByName": {
        "id": Any<String>,
        "isFavorite": Any<Boolean>,
        "maxCP": Any<Number>,
        "maxHP": Any<Number>,
        "name": Any<String>,
        "resistant": [
          "Water",
          "Electric",
          "Grass",
          "Fighting",
          "Fairy",
        ],
        "types": [
          "Grass",
          "Poison",
        ],
        "weaknesses": [
          "Fire",
          "Ice",
          "Flying",
          "Psychic",
        ],
      },
    },
  },
  "status": 200,
}
`;

exports[`Graphql Should return pokemon types 1`] = `
{
  "body": {
    "data": {
      "pokemonTypes": [
        "Bug",
        "Dragon",
        "Electric",
        "Fairy",
        "Fighting",
        "Fire",
        "Flying",
        "Ghost",
        "Grass",
        "Ground",
        "Ice",
        "Normal",
        "Poison",
        "Psychic",
        "Rock",
        "Steel",
        "Water",
      ],
    },
  },
  "status": 200,
}
`;
